--- a/src/screens/new_curriculum_screen.kv
+++ b/src/screens/new_curriculum_screen.kv
@@ -32,6 +32,9 @@ NewCurriculumScreenRoot:
             height: dp(40)
 
         ScrollView:
+            scroll_type: ['content', 'bars']
+            bar_margin: dp(2)
+            bar_width: dp(16)
             id: sv_page
             do_scroll_x: False
             do_scroll_y: True
@@ -39,34 +42,83 @@ NewCurriculumScreenRoot:
             BoxLayout:
                 orientation: 'vertical'
                 size_hint_y: None
-                height: root.height
+                height: dp(720)
 
                 Label:
                     text_size: self.size
                     id: live_description_label
-                    height: dp(100)
-                    size_hint_y: dp(200)
+                    height: dp(120)
+                    size_hint_y: None
                     text: ''
 
                 Label:
                     markup: True
-                    text: '[size=30]Topics:[/size]'
-                    text_size: self.size
-                    size_hint: (1.0, None)
-                    height: dp(80)
-                Label:
-                    markup: True
-                    text: '[size=30]Required Courses:[/size]'
-                    text_size: self.size
-                    size_hint: (1.0, None)
-                    height: dp(80)
-                Label:
-                    markup: True
-                    text: '[size=30]Elective Courses:[/size]'
+                    text: '           [size=30]Topics:[/size]'
                     text_size: self.size
                     size_hint: (1.0, None)
                     height: dp(80)
 
+                ScrollView:
+                    size_hint: (None, None)
+                    height: dp(120)
+                    width: root.width - dp(20)
+                    canvas.before:
+                        Color:
+                            rgb: 0.05, 0.05, 1.0
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+
+                    RowSelectorWidget:
+                        pos: root.x, root.y
+                        size_hint_x: 1.0
+                        size_hint_y: 1.0
+                        id: topics_list
+                Label:
+                    markup: True
+                    text: '           [size=30]Required Courses:[/size]'
+                    text_size: self.size
+                    size_hint: (1.0, None)
+                    height: dp(80)
+
+                ScrollView:
+                    size_hint: (None,None)
+                    height: dp(120)
+                    width: root.width - dp(20)
+                    canvas.before:
+                        Color:
+                            rgb: 0.05, 0.05, 1.0
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+
+                    RowSelectorWidget:
+                        pos: root.x, root.y
+                        size_hint_x: 1.0
+                        size_hint_y: 1.0
+                        id: topics_list
+                Label:
+                    markup: True
+                    text: '           [size=30]Elective Courses:[/size]'
+                    text_size: self.size
+                    size_hint: (1.0, None)
+                    height: dp(80)
+
+                ScrollView:
+                    size_hint: (None,None)
+                    width: root.width - dp(20)
+                    height: dp(120)
+                    canvas.before:
+                        Color:
+                            rgb: 0.05, 0.05, 1.0
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+                    RowSelectorWidget:
+                        pos: root.x, root.y
+                        size_hint_x: 1.0
+                        size_hint_y: 1.0
+                        id: topics_list
 
 
     AnchorLayout:
