--- a/src/screens/new_course_screen.kv
+++ b/src/screens/new_course_screen.kv
@@ -40,7 +40,7 @@ NewCourseScreenRoot:
             pos_hint: (None, None)
             size_hint: (None, None)
             size: (root.width, dp(195))
-            rows: 6
+            rows: 10
             cols: 2
             padding: dp(10)
             spacing: dp(2)
@@ -53,7 +53,6 @@ NewCourseScreenRoot:
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
-
             TextInput:
                 on_text: root.update_live_description_callback()
                 id: course_name
@@ -101,6 +100,85 @@ NewCourseScreenRoot:
                 id: description
                 multiline: False
                 text: ''
+
+            Widget: # empty widget
+                size_hint_x: None
+                height: dp(50)
+
+            IntTextInput:
+                on_text: root.update_live_description_callback()
+                height: dp(50)
+                id: id_in_charge
+                multiline: False
+                text: ''
+            Label:
+                size_hint_x: None
+                width: dp(200)
+                height: dp(50)
+                text: 'Add Course Topic:'
+                text_size: self.size
+                halign: 'right'
+                valign: 'middle'
+            BoxLayout:
+                orientation: 'horizontal'
+                Button:
+                    height: dp(50)
+                    width: dp(30)
+                    text: '+'
+                    size_hint_x: None
+                    on_press: root.add_topic_callback()
+
+                Label:
+                    text: 'Topic ID:'
+                    height: dp(50)
+                    width: dp(60)
+                    size_hint_x: None
+                IntTextInput:
+                    on_text: root.update_live_description_callback()
+                    height: dp(50)
+                    id: course_topic_id
+                    multiline: False
+                    text: ''
+
+            Widget: # empty widget
+                size_hint_x: None
+                height: dp(50)
+
+            IntTextInput:
+                on_text: root.update_live_description_callback()
+                height: dp(50)
+                id: id_in_charge
+                multiline: False
+                text: ''
+            Label:
+                size_hint_x: None
+                width: dp(200)
+                height: dp(50)
+                text: 'Add Course Goal:'
+                text_size: self.size
+                halign: 'right'
+                valign: 'middle'
+            BoxLayout:
+                orientation: 'horizontal'
+                Button:
+                    height: dp(50)
+                    width: dp(30)
+                    text: '+'
+                    size_hint_x: None
+                    on_press: root.add_topic_callback()
+
+                Label:
+                    text: 'Goal ID:'
+                    height: dp(50)
+                    width: dp(60)
+                    size_hint_x: None
+                IntTextInput:
+                    on_text: root.update_live_description_callback()
+                    height: dp(50)
+                    id: course_goal_id
+                    multiline: False
+                    text: ''
+
 
             Widget: # empty widget
                 size_hint_x: None
