--- a/src/screens/new_person_screen.kv
+++ b/src/screens/new_person_screen.kv
@@ -1,6 +1,7 @@
 #:kivy 1.0
 
 #:import login_screen src.screens.main_screen
+#:import text_input_widgets src.widgets.text_input_widgets
 
 # This script is written in kv script language
 # which makes our implementation a bit easier.
@@ -11,52 +12,92 @@
 
 NewPersonScreenRoot:
 
-    AnchorLayout:
-        center: root.center
-        size: (1000, 1200)
 
-        GridLayout
-            rows: 4
+    BoxLayout:
+        orientation: 'vertical'
+        pos: (dp(0), dp(230))
+        width: root.width
+        height: root.height - dp(230)
+        size_hint: (None, None)
+
+        Label:
+            canvas.before:
+                Color:
+                    rgb: 0.37, 0.37, 0.37
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+            text: 'New Curriculum'
+            size_hint: (1.0, None)
+            height: dp(40)
+
+    AnchorLayout:
+        anchor_x: 'left'
+        anchor_y: 'bottom'
+        size: (dp(100), dp(100))
+        padding: 10
+
+        Button:
+            size_hint: (None, None)
+            size: (dp(100), dp(30))
+            text: 'Back'
+            on_press: root.back_callback()
+
+    StackLayout:
+        orientation: 'lr-bt'
+
+        GridLayout:
+            pos_hint: (None, None)
+            size_hint: (None, None)
+            size: (root.width, dp(228))
+            rows: 7
             cols: 2
-            padding: 100
-            spacing: 75
+            padding: dp(10)
+            spacing: dp(2)
 
             Label:
                 size_hint_x: None
-                width: 300
-                text: 'Name:'
+                width: dp(200)
+                height: dp(50)
+                text: 'Person Name:'
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
+
             TextInput:
-                id: name
+                on_text: root.update_live_description_callback()
+                id: person_name
                 multiline: False
                 text: ''
 
             Label:
                 size_hint_x: None
-                width: 300
-                text: 'ID:'
+                width: dp(200)
+                height: dp(50)
+                text: 'Person ID:'
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
-            TextInput:
+
+            IntTextInput:
+                on_text: root.update_live_description_callback()
+                height: dp(50)
                 id: person_id
                 multiline: False
                 text: ''
 
             Widget: # empty widget
                 size_hint_x: None
-                width: 80
+                width: dp(80)
 
-            Button:
-                text: 'Back'
-                on_press: root.back_callback()
+            Widget: # empty widget
+                height: dp(50)
 
             Widget: # empty widget
                 size_hint_x: None
-                width: 80
+                width: dp(80)
 
             Button:
+                height: dp(50)
                 text: 'Submit'
                 on_press: root.submit_callback()
