--- a/src/screens/new_course_screen.kv
+++ b/src/screens/new_course_screen.kv
@@ -13,14 +13,116 @@
 
 NewCourseScreenRoot:
 
-    Label:
+    BoxLayout:
+        orientation: 'vertical'
+        pos: (dp(0), dp(260))
         width: root.width
-        height: root.height
+        height: root.height - dp(260)
         size_hint: (None, None)
-        text_size: self.size
-        id: live_description_label
-        text: ''
 
+        Label:
+            canvas.before:
+                Color:
+                    rgb: 0.37, 0.37, 0.37
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+            text: 'New Course'
+            size_hint: (1.0, None)
+            height: dp(40)
+
+        ScrollView:
+            scroll_type: ['content', 'bars']
+            bar_margin: dp(2)
+            bar_width: dp(16)
+            id: sv_page
+            do_scroll_x: False
+            do_scroll_y: True
+
+            BoxLayout:
+                orientation: 'vertical'
+                size_hint_y: None
+                height: dp(540)
+
+                Label:
+                    text_size: self.size
+                    id: live_description_label
+                    height: dp(140)
+                    size_hint_y: None
+                    text: ''
+
+                BoxLayout:
+                    size_hint: (None, None)
+                    height: dp(80)
+                    width: root.width - dp(20)
+                    orientation: 'horizontal'
+                    Label:
+                        markup: True
+                        text: '           [size=30]Topics:[/size]'
+                        text_size: self.size
+                        size_hint: (1.0, None)
+                        height: dp(80)
+                    Button:
+                        size_hint: (None,None)
+                        width: dp(200)
+                        height: dp(30)
+                        text: 'Remove selected topic'
+
+                ScrollView:
+                    size_hint: (None, None)
+                    height: dp(120)
+                    width: root.width - dp(20)
+                    canvas.before:
+                        Color:
+                            rgb: 0.05, 0.05, 0.05
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+                    StackLayout:
+                        id: sv_topics_list
+                        orientation: 'lr-tb'
+                        size_hint_y: None
+                        RowSelectorWidget:
+                            pos: root.x, root.y
+                            size_hint_x: 1.0
+                            size_hint_y: 1.0
+                            id: topics_list
+                BoxLayout:
+                    size_hint: (None, None)
+                    height: dp(80)
+                    width: root.width - dp(20)
+                    orientation: 'horizontal'
+                    Label:
+                        markup: True
+                        text: '           [size=30]Goals:[/size]'
+                        text_size: self.size
+                        size_hint: (1.0, None)
+                        height: dp(80)
+                    Button:
+                        size_hint: (None,None)
+                        width: dp(200)
+                        height: dp(30)
+                        text: 'Remove selected goal'
+
+                ScrollView:
+                    size_hint: (None, None)
+                    height: dp(120)
+                    width: root.width - dp(20)
+                    canvas.before:
+                        Color:
+                            rgb: 0.05, 0.05, 0.05
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+                    StackLayout:
+                        id: sv_goals_list
+                        orientation: 'lr-tb'
+                        size_hint_y: None
+                        RowSelectorWidget:
+                            pos: root.x, root.y
+                            size_hint_x: 1.0
+                            size_hint_y: 1.0
+                            id: goals_list
     AnchorLayout:
         anchor_x: 'left'
         anchor_y: 'bottom'
@@ -39,8 +141,8 @@ NewCourseScreenRoot:
         GridLayout
             pos_hint: (None, None)
             size_hint: (None, None)
-            size: (root.width, dp(195))
-            rows: 10
+            size: (root.width, dp(256))
+            rows: 8
             cols: 2
             padding: dp(10)
             spacing: dp(2)
@@ -53,6 +155,7 @@ NewCourseScreenRoot:
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
+
             TextInput:
                 on_text: root.update_live_description_callback()
                 id: course_name
@@ -67,6 +170,7 @@ NewCourseScreenRoot:
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
+
             TextInput:
                 on_text: root.update_live_description_callback()
                 id: subject_code
@@ -81,6 +185,7 @@ NewCourseScreenRoot:
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
+
             IntTextInput:
                 on_text: root.update_live_description_callback()
                 id: credit_hours
@@ -91,24 +196,13 @@ NewCourseScreenRoot:
                 size_hint_x: None
                 width: dp(200)
                 height: dp(50)
-                text: 'Description'
+                text: 'Description:'
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
             TextInput:
                 on_text: root.update_live_description_callback()
-                id: description
-                multiline: False
-                text: ''
-
-            Widget: # empty widget
-                size_hint_x: None
-                height: dp(50)
-
-            IntTextInput:
-                on_text: root.update_live_description_callback()
-                height: dp(50)
-                id: id_in_charge
+                id: comment_1
                 multiline: False
                 text: ''
             Label:
@@ -119,6 +213,7 @@ NewCourseScreenRoot:
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
+
             BoxLayout:
                 orientation: 'horizontal'
                 Button:
@@ -140,16 +235,6 @@ NewCourseScreenRoot:
                     multiline: False
                     text: ''
 
-            Widget: # empty widget
-                size_hint_x: None
-                height: dp(50)
-
-            IntTextInput:
-                on_text: root.update_live_description_callback()
-                height: dp(50)
-                id: id_in_charge
-                multiline: False
-                text: ''
             Label:
                 size_hint_x: None
                 width: dp(200)
@@ -158,6 +243,7 @@ NewCourseScreenRoot:
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
+
             BoxLayout:
                 orientation: 'horizontal'
                 Button:
@@ -165,20 +251,20 @@ NewCourseScreenRoot:
                     width: dp(30)
                     text: '+'
                     size_hint_x: None
-                    on_press: root.add_topic_callback()
+                    on_press: root.add_goal_callback()
 
                 Label:
                     text: 'Goal ID:'
                     height: dp(50)
                     width: dp(60)
                     size_hint_x: None
+
                 IntTextInput:
                     on_text: root.update_live_description_callback()
                     height: dp(50)
                     id: course_goal_id
                     multiline: False
                     text: ''
-
 
             Widget: # empty widget
                 size_hint_x: None
