--- a/src/screens/new_curriculum_screen.kv
+++ b/src/screens/new_curriculum_screen.kv
@@ -67,6 +67,7 @@ NewCurriculumScreenRoot:
                         width: dp(200)
                         height: dp(30)
                         text: 'Remove selected topic'
+                        on_press: root.remove_topic_callback()
 
                 ScrollView:
                     size_hint: (None, None)
@@ -104,6 +105,7 @@ NewCurriculumScreenRoot:
                         width: dp(200)
                         height: dp(30)
                         text: 'Remove selected course'
+                        on_press: root.remove_req_course_callback()
 
                 ScrollView:
                     size_hint: (None,None)
@@ -140,6 +142,7 @@ NewCurriculumScreenRoot:
                         width: dp(200)
                         height: dp(30)
                         text: 'Remove selected course'
+                        on_press: root.remove_opt_course_callback()
 
                 ScrollView:
                     size_hint: (None,None)
@@ -327,7 +330,7 @@ NewCurriculumScreenRoot:
                     width: dp(80)
                     size_hint_x: None
                     id: course_type
-                    text: 'Optional'
+                    text: 'Required'
                     values: ('Required', 'Optional')
 
             Widget: # empty widget
