Minor debugging on my end.

--- a/src/screens/new_goal_screen.kv
+++ b/src/screens/new_goal_screen.kv
@@ -95,7 +95,7 @@ NewGoalScreenRoot:
                 halign: 'right'
                 valign: 'middle'
 
-            IntTextInput:
+            TextInput:
                 on_text: root.update_live_description_callback()
                 height: dp(50)
                 id: description
