--- a/src/screens/new_person_screen.kv
+++ b/src/screens/new_person_screen.kv
@@ -27,7 +27,7 @@ NewPersonScreenRoot:
                 Rectangle:
                     pos: self.pos
                     size: self.size
-            text: 'New Curriculum'
+            text: 'New Person'
             size_hint: (1.0, None)
             height: dp(40)
 
