--- a/src/screens/new_section_screen.kv
+++ b/src/screens/new_section_screen.kv
@@ -42,7 +42,7 @@ NewSectionScreenRoot:
             BoxLayout:
                 orientation: 'vertical'
                 size_hint_y: None
-                height: dp(720)
+                height: dp(320)
 
                 Label:
                     text_size: self.size
@@ -53,83 +53,36 @@ NewSectionScreenRoot:
 
                 Label:
                     markup: True
-                    text: '           [size=30]Topics:[/size]'
+                    text: '           [size=30]Comments:[/size]'
                     text_size: self.size
                     size_hint: (1.0, None)
-                    height: dp(80)
+                    height: dp(40)
+                AnchorLayout:
+                    width: root.width - dp(80)
+                    anchor_x: 'center'
 
-                ScrollView:
-                    size_hint: (None, None)
-                    height: dp(120)
-                    width: root.width - dp(20)
-                    canvas.before:
-                        Color:
-                            rgb: 0.05, 0.05, 1.0
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
-                    StackLayout:
-                        id: sv_topics_list
-                        orientation: 'lr-tb'
-                        size_hint_y: None
-                        RowSelectorWidget:
-                            pos: root.x, root.y
-                            size_hint_x: 1.0
-                            size_hint_y: 1.0
-                            id: topics_list
-                Label:
-                    markup: True
-                    text: '           [size=30]Required Courses:[/size]'
-                    text_size: self.size
-                    size_hint: (1.0, None)
-                    height: dp(80)
+                    BoxLayout:
+                        orientation: 'vertical'
+                        size_hint: (None, None)
+                        center_x: root.center_x
+                        pos_hint_x: None
+                        pos_x: dp(40)
+                        width: root.width - dp(80)
+                        height: dp(160)
 
-                ScrollView:
-                    size_hint: (None,None)
-                    height: dp(120)
-                    width: root.width - dp(20)
-                    canvas.before:
-                        Color:
-                            rgb: 0.05, 0.05, 1.0
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
-                    StackLayout:
-                        id: sv_req_courses_list
-                        orientation: 'lr-tb'
-                        size_hint_y: None
-                        RowSelectorWidget:
-                            pos: root.x, root.y
-                            size_hint_x: 1.0
-                            size_hint_y: 1.0
-                            id: req_courses_list
-                Label:
-                    markup: True
-                    text: '           [size=30]Elective Courses:[/size]'
-                    text_size: self.size
-                    size_hint: (1.0, None)
-                    height: dp(80)
+                        Label:
+                            markup: False
+                            id: comment_1
+                            text: '<COMMENT 1>'
+                            text_size: self.size
+                            height: dp(80)
 
-                ScrollView:
-                    size_hint: (None,None)
-                    width: root.width - dp(20)
-                    height: dp(120)
-                    canvas.before:
-                        Color:
-                            rgb: 0.05, 0.05, 1.0
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
-                    StackLayout:
-                        id: sv_opt_courses_list
-                        orientation: 'lr-tb'
-                        size_hint_y: None
-
-                        RowSelectorWidget:
-                            pos: root.x, root.y
-                            size_hint_x: 1.0
-                            size_hint_y: 1.0
-                            id: opt_courses_list
+                        Label:
+                            markup: False
+                            id: comment_2
+                            text: '<COMMENT 2>'
+                            text_size: self.size
+                            height: dp(80)
 
 
     AnchorLayout:
@@ -175,17 +128,26 @@ NewSectionScreenRoot:
                 size_hint_x: None
                 width: dp(200)
                 height: dp(50)
-                text: 'Semester:'
+                text: 'Year/Semester:'
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
-
-            IntTextInput:
-                on_text: root.update_live_description_callback()
+            BoxLayout:
+                orientation: 'horizontal'
                 height: dp(50)
-                id: semester
-                multiline: False
-                text: ''
+
+                    IntTextInput:
+                        on_text: root.update_live_description_callback()
+                        height: dp(50)
+                        id: year
+                        multiline: False
+                        text: ''
+                    Spinner:
+                        height: dp(50)
+                        size_hint_x: None
+                        width: dp(100)
+                        values: ('Fall', 'Summer',' )
+                        on_select: root.update_live_description_callback()
 
             Label:
                 size_hint_x: None
