--- a/src/screens/course_dashboard_screen.kv
+++ b/src/screens/course_dashboard_screen.kv
@@ -90,7 +90,7 @@ CourseDashboardScreenRoot:
                 Label:
                     text_size: self.size
                     id: topic_tree_label
-                    text: 'Topics'
+                    text: ''
                     size_hint_y: None
                     height: dp(40)
 
@@ -123,7 +123,7 @@ CourseDashboardScreenRoot:
                     id: goal_tree_label
                     size_hint_y: None
                     height: dp(40)
-                    text: 'Goals'
+                    text: ''
 
                 ScrollView:
                     height: dp(200)
