--- a/src/screens/enter_grades_screen.kv
+++ b/src/screens/enter_grades_screen.kv
@@ -35,7 +35,7 @@ EnterGradesScreenRoot:
             spacing: dp(8)
 
             Button:
-                text: 'Add New Goal'
+                text: 'Add New Goal Grades'
                 on_press: root.add_goal_grades_callback()
 
             Button:
